--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/revistagq_com.ico" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -220,12 +220,12 @@
 
       <div class="row">
 
-    <div class="col-lg-6 col-md-4 col-sm-6" style="padding: 2% 2% 2% 0;">
+    <div class="col-lg-6 col-md-6 col-sm-6" style="padding: 2% 2% 2% 0;">
 
     <h3>Find the True Love of Your Life Today.</h3>
 
     </div>
-        <div class="col-lg-6 col-md-4 col-sm-6">
+        <div class="col-lg-6 col-md-6 col-sm-6">
     <button type="button"class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
 
     <button type="button" class="btn btn-light btn-lg download-btn" style="border : 1px solid black"><i class="fab fa-google-play"></i> Download</button>
