--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2>A Plan for a better tommorow</h2>
+    <p>Simple and affordable price plans for your and your freinds.</p>
 
 <div class="row">
 
