Complete HTML and CSS, ready for JS

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="">Press</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Pricing</a>
@@ -81,14 +81,14 @@
   <section id="features">
 
     <div class="row" style="margin: 0% 10% 3% 10%;">
-      <div class="col-lg-4 col-md-4 col-sm-12">
+      <div class="col-lg-4 col-md-6 col-sm-12">
 
         <i class="far fa-user-circle icon fa-4x"></i>
         <h3>Easy to use.</h3>
         <p>Locate people in your area, ready to act.</p>
 
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-12">
+      <div class="col-lg-4 col-md-6 col-sm-12">
 
         <i class="fas fa-award icon fa-4x"></i>
         <h3>Complete challenges.</h3>
@@ -157,7 +157,7 @@
   <section id="pricing">
 
     <h2>A Plan for a better tommorow</h2>
-    <p>Simple and affordable price plans for your and your freinds.</p>
+    <p>Simple and affordable price plans for you and your freinds.</p>
 
 <div class="row">
 
@@ -220,12 +220,12 @@
 
       <div class="row">
 
-    <div class="col-lg-6 col-md-6 col-sm-6" style="padding: 2% 2% 2% 0;">
+    <div class="col-lg-6 col-md-6 col-sm-6" style="padding: 1% 2% 0% 5%;">
 
     <h3>Find the True Love of Your Life Today.</h3>
 
     </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="col-lg-6 col-md-6 col-sm-6" style="padding: 0% 2% 2% 5%;">
     <button type="button"class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
 
     <button type="button" class="btn btn-light btn-lg download-btn" style="border : 1px solid black"><i class="fab fa-google-play"></i> Download</button>
@@ -239,9 +239,28 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer id="footer" style="padding: 1% 2% 0% 5%;">
 
-    <p>© Copyright 2019 humanTree</p>
+    <div class="row">
+        
+        <div class="col-lg-4 com-md-4 col-sm-4" style="text-align: left">
+            <p> email: info@humantree.com </p>
+        </div>
+
+        <div class="col-lg-4 com-md-4 col-sm-4" style="text-align: center">
+          <p> 
+              <i class="fab fa-facebook-square icon fa-2x" style="padding-left: 2px; padding-right: 2px;"></i>
+              <i class="fab fa-instagram icon fa-2x" style="padding-left: 2px; padding-right: 2px;"></i>  
+              <i class="fab fa-twitter-square icon fa-2x" style="padding-left: 2px; padding-right: 2px;"></i>
+              <i class="fab fa-linkedin icon fa-2x" style="padding-left: 2px; padding-right: 2px;"></i>
+          </p>
+        </div>
+
+        <div class="col-lg-4 com-md-4 col-sm-4">
+            <p>© Copyright 2019 humanTree</p>
+        </div>
+
+    </div>  
 
   </footer>
 
