added scroll smooth in CSS for all

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: rgb(125, 255, 212);">
 
-        <a class="navbar-brand" href="" style="font-size: 1.7rem; padding-left: 30px">humanTree</a>
+        <a class="navbar-brand" href="#title" style="font-size: 1.7rem; padding-left: 30px">humanTree</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -42,13 +42,13 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Press</a>
+              <a class="nav-link" href="#testimonials">Press</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -257,7 +257,7 @@
         </div>
 
         <div class="col-lg-4 com-md-4 col-sm-4">
-            <p>© Copyright 2019 humanTree</p>
+            <p>© Copyright 2019-2023 humanTree</p>
         </div>
 
     </div>  
